--- a/garbage/test.ipynb
+++ b/garbage/test.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n",
+      "checkpoint directory created: ./model\n",
+      "saving model version 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "from kan import *"
+    "from kan import *\n",
+    "import torch\n",
+    "torch.set_default_dtype(torch.float64)\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)\n",
+    "\n",
+    "# create a KAN: 2D inputs, 1D output, and 5 hidden neurons. cubic spline (k=3), 5 grid intervals (grid=5).\n",
+    "model = KAN(width=[2,5,1], grid=3, k=3, seed=42, device=device)"
    ]
   },
   {
@@ -1674,7 +1692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
