--- a/Neural_KAN.ipynb
+++ b/Neural_KAN.ipynb
@@ -621,6 +621,128 @@
     "            if isinstance(module, nn.Linear):\n",
     "                print(module.weight)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 1, 5])\n",
+      "torch.Size([10, 1, 50])\n",
+      "torch.Size([10, 5])\n",
+      "torch.Size([10, 1, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class GRU(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, batch_first=True):\n",
+    "        super(GRU, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        # GRU layer\n",
+    "        self.gru = nn.GRU(input_size, self.hidden_size, num_layers = 1)\n",
+    "        \n",
+    "        # Fully connected layer to map the hidden state to output\n",
+    "        self.fc = nn.Linear(self.hidden_size, input_size)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        batch_size = x.size(1)\n",
+    "        x.size(2)\n",
+    "        hidden_state = torch.ones(1,batch_size, self.hidden_size)#num_layer, batch_size, hidden_dim\n",
+    "        iters = 10\n",
+    "        print(x.shape)\n",
+    "        out,h = self.gru(x, hidden_state)\n",
+    "        print(out.shape)\n",
+    "        print(self.fc(out[:, -1, :]).shape)\n",
+    "        for t in range(iters):\n",
+    "            out, hidden_state = self.gru(x, hidden_state)\n",
+    "            x = self.fc(out[:, -1, :])\n",
+    "            x = x.reshape(-1,1,input_size) \n",
+    "        return x\n",
+    "\n",
+    "# Example usage\n",
+    "input_size = 5  # Input dimension\n",
+    "hidden_size = 10  # GRU hidden size\n",
+    "\n",
+    "# Create the model\n",
+    "model = GRU(input_size, input_size*hidden_size)\n",
+    "\n",
+    "# Example input (batch_size=10, seq_length=1, input_size=5)\n",
+    "x = torch.randn(10,1,input_size)\n",
+    "\n",
+    "# Forward pass\n",
+    "output = model(x)\n",
+    "print(output.shape)  # Expected output shape: (batch_size, seq_length, output_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([150, 5])\n",
+      "torch.Size([150, 50])\n",
+      "torch.Size([150])\n",
+      "torch.Size([150])\n",
+      "torch.Size([150, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for weight in model.gru.all_weights[0]:\n",
+    "    print(weight.shape)\n",
+    "\n",
+    "def hidden_sparistiy_masks(out_dim=50, in_dim=5, input_neurons=1, output_neurons=10):\n",
+    "    mask = torch.zeros(out_dim, in_dim)\n",
+    "    for i in range(0,in_dim):\n",
+    "        mask[i*output_neurons:output_neurons*(i + 1) , i*input_neurons:(i + 1)*input_neurons] = 1\n",
+    "    mask = torch.vstack([mask for i in range(3)])\n",
+    "    return mask\n",
+    "print(hidden_sparistiy_masks().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([60, 10])\n",
+      "torch.Size([60, 20])\n",
+      "torch.Size([60])\n",
+      "torch.Size([60])\n",
+      "tensor([[[-1.1765, -0.6020,  0.2905, -0.8836, -0.5612,  0.3081,  0.4284,\n",
+      "          -0.0191,  0.0199, -0.6109, -0.1067,  0.4155,  0.3936, -0.9498,\n",
+      "           1.8194,  0.5143,  1.2690, -1.0503,  0.2242,  0.1080]]],\n",
+      "       grad_fn=<StackBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "rnn = nn.GRU(10, 20, 1)\n",
+    "for param in rnn.all_weights[0]:\n",
+    "    print(param.shape)\n",
+    "x = torch.randn(1,1,10)\n",
+    "h0 = torch.randn(1,1, 20)\n",
+    "output, hn = rnn(x, h0)\n",
+    "print(output)"
+   ]
   }
  ],
  "metadata": {
