--- a/projection.ipynb
+++ b/projection.ipynb
@@ -166,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dill\n",
-    "with open(\"models_projected.dill\", \"wb\") as file:\n",
+    "with open(\"models_projected_last_one.dill\", \"wb\") as file:\n",
     "    dill.dump(models, file)"
    ]
   },
