--- a/projection_method.ipynb
+++ b/projection_method.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "            if iters == 10:\n",
     "                self.test_loss_reached = True\n",
     "            scheduler.step()\n",
-    "            if epoch > 1000:\n",
+    "            if epoch > 4000:\n",
     "                break\n",
     "        self.end_test_loss = sum(test_losses[-5:]) / 5\n",
     "        self.end_train_loss = sum(train_losses[-5:]) / 5  \n",
@@ -239,22 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 tensor([1.3370]) tensor([0.3894]) tensor([1.2295]) tensor(0.6402, grad_fn=<MulBackward0>) False [0.01526618604971604, 0.015214643913857413, 0.015218551468217012, 0.015263240996070883, 0.01525296898784511] 1e-05\n",
-      "2 tensor([1.9599]) tensor([0.4627]) tensor([1.3043]) tensor(1.1828, grad_fn=<MulBackward0>) False [0.05308412839517449, 0.05295808906808044, 0.05321640160047647, 0.052998891664725364, 0.052911680643305634] 1e-05\n",
-      "4 tensor([1.3382]) tensor([0.8905]) tensor([1.8494]) tensor(2.2039, grad_fn=<MulBackward0>) False [0.005326809569713519, 0.005311823270114308, 0.00534518004860729, 0.005329968421861078, 0.00532764623869408] 1e-05\n",
-      "8 tensor([1.4747]) tensor([0.9659]) tensor([1.5554]) tensor(2.2155, grad_fn=<MulBackward0>) False [0.0068962275488019895, 0.0068993076406927275, 0.006904766598547047, 0.006920462781140072, 0.006901052145456726] 1e-05\n",
-      "16 tensor([1.7280]) tensor([0.9197]) tensor([1.3937]) tensor(2.2148, grad_fn=<MulBackward0>) False [0.007548179655603952, 0.007518186745459609, 0.007518849339138604, 0.007549160431760053, 0.0075169312167969165] 1e-05\n",
-      "32 tensor([1.2137]) tensor([2.1042]) tensor([0.8655]) tensor(2.2103, grad_fn=<MulBackward0>) False [0.006750196500709562, 0.006745988573653229, 0.0067577758578188495, 0.006700383760317257, 0.006716281329069964] 1e-05\n",
-      "64 tensor([1.7114]) tensor([1.2917]) tensor([1.0027]) tensor(2.2164, grad_fn=<MulBackward0>) False [0.0077860458563505245, 0.007758937171081815, 0.00780874021196117, 0.007841145725582133, 0.007867064965521973] 1e-05\n",
-      "128 tensor([1.4297]) tensor([1.1903]) tensor([1.3027]) tensor(2.2168, grad_fn=<MulBackward0>) False [0.007835044895976105, 0.007854283099401404, 0.007836719706767437, 0.007805799490377081, 0.007810392685121659] 1e-05\n",
-      "256 tensor([1.2331]) tensor([1.2971]) tensor([1.3864]) tensor(2.2175, grad_fn=<MulBackward0>) False [0.006011644371249007, 0.006025560829915445, 0.006012961771127514, 0.006015470699684088, 0.0060270843413573775] 1e-05\n"
+      "1 tensor([1.6996]) tensor([0.8847]) tensor([1.2508]) tensor(1.8806, grad_fn=<MulBackward0>) False [0.008736321095828756, 0.00875280447530024, 0.008721447133487372, 0.008731942623853683, 0.008738879509495966] 1e-05\n",
+      "2 tensor([0.5299]) tensor([1.9401]) tensor([0.0265]) tensor(0.0272, grad_fn=<MulBackward0>) False [0.05169964926035115, 0.05187054785589377, 0.051705878735943275, 0.051897996020588005, 0.0519631202191566] 1e-05\n",
+      "4 tensor([0.9672]) tensor([1.6767]) tensor([1.3589]) tensor(2.2038, grad_fn=<MulBackward0>) False [0.005358770324770982, 0.005339645681846322, 0.005325381171353387, 0.005323900419611935, 0.0053829070053656] 1e-05\n",
+      "8 tensor([1.2574]) tensor([0.9304]) tensor([1.8802]) tensor(2.1996, grad_fn=<MulBackward0>) False [0.005133857845618023, 0.0051370048392775725, 0.005115294860760597, 0.0051159793934361505, 0.005143719224372145] 1e-05\n",
+      "16 tensor([1.3792]) tensor([1.3149]) tensor([1.2291]) tensor(2.2291, grad_fn=<MulBackward0>) False [0.00882258633800754, 0.008797691094293965, 0.008826460721055892, 0.008849582765392508, 0.008770025892634734] 1e-05\n",
+      "32 tensor([1.1455]) tensor([1.2755]) tensor([1.5284]) tensor(2.2330, grad_fn=<MulBackward0>) False [0.009805952689158872, 0.009754326589631311, 0.009772196066368258, 0.009771676455398627, 0.009734449650612518] 1e-05\n",
+      "64 tensor([1.7400]) tensor([0.6448]) tensor([1.9760]) tensor(2.2171, grad_fn=<MulBackward0>) False [0.007575811975226371, 0.007602432402288259, 0.007583474405250992, 0.00757584400531469, 0.0076065822045855] 1e-05\n"
      ]
     }
    ],
@@ -266,7 +264,7 @@
     "Bs = [2] \n",
     "#Bs = [2]\n",
     "#decays = [1e-2]\n",
-    "for i in range(9):\n",
+    "for i in range(7):\n",
     "    diction = {2**i: []}\n",
     "    for B in Bs:\n",
     "        model = UniNN(2**i, B = B)\n",
@@ -277,16 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "64 tensor([3.1816]) tensor([0.7681]) tensor(2.4420, grad_fn=<MulBackward0>) False [0.008302290197179624, 0.008273573112532948, 0.008295258951627395, 0.008274776931626327, 0.008305565792728554] 1e-05\n",
-      "128 tensor([2.4688]) tensor([0.9432]) tensor(2.3282, grad_fn=<MulBackward0>) False [0.009182009849499798, 0.009233484884272471, 0.009249789696751219, 0.009250690553788885, 0.009229372424835508] 1e-05\n",
-      "256 tensor([1.9999]) tensor([1.0398]) tensor(2.0802, grad_fn=<MulBackward0>) False [0.009274871145008188, 0.009369844366147212, 0.009341000113636255, 0.009430812163786455, 0.009319415323041154] 1e-05\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[205], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m B \u001b[38;5;129;01min\u001b[39;00m Bs:\n\u001b[0;32m      4\u001b[0m     model \u001b[38;5;241m=\u001b[39m UniNN(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mi)\n\u001b[1;32m----> 5\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlr\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1e-3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdataloader_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataloader_test\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdataloader_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdecay\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mB\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     diction[\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mi]\u001b[38;5;241m.\u001b[39mappend(model)\n\u001b[0;32m      7\u001b[0m models\u001b[38;5;241m.\u001b[39mupdate(diction)\n",
+      "Cell \u001b[1;32mIn[202], line 77\u001b[0m, in \u001b[0;36mUniNN.fit\u001b[1;34m(self, dataloader, dataloader_test, epochs, lr, decay, B)\u001b[0m\n\u001b[0;32m     75\u001b[0m overall_loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m     76\u001b[0m \u001b[38;5;66;03m#print(self.fc3.weight.grad)\u001b[39;00m\n\u001b[1;32m---> 77\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_grad_B\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mupdate_B()\n\u001b[0;32m     79\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "Cell \u001b[1;32mIn[202], line 124\u001b[0m, in \u001b[0;36mUniNN.compute_grad_B\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    122\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_grad_B\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    123\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrad_B_1 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msum(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mgrad \u001b[38;5;241m*\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m/\u001b[39m torch\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mmatrix_norm(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39morder))) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.0005\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3_max_layer_norm \u001b[38;5;241m*\u001b[39m torch\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m7\u001b[39m \u001b[38;5;241m*\u001b[39m ((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3_max_layer_norm) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB)) \u001b[38;5;66;03m#+ 2 * 0.001 * self.fc1_max_layer_norm.data ## Reg\u001b[39;00m\n\u001b[1;32m--> 124\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrad_B_2 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msum(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mgrad \u001b[38;5;241m*\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m/\u001b[39m torch\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mmatrix_norm(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39morder))) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.0005\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3_max_layer_norm \u001b[38;5;241m*\u001b[39m torch\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m7\u001b[39m \u001b[38;5;241m*\u001b[39m ((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfc3_max_layer_norm\u001b[49m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB))\u001b[38;5;66;03m#+ 2 * 0.001 * self.fc1_max_layer_norm.data ## Reg\u001b[39;00m\n\u001b[0;32m    125\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrad_B_3 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msum(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mgrad \u001b[38;5;241m*\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m/\u001b[39m torch\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mmatrix_norm(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39morder))) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.0005\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_max_layer_norm \u001b[38;5;241m*\u001b[39m  torch\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m7\u001b[39m \u001b[38;5;241m*\u001b[39m ((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_max_layer_norm \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3_max_layer_norm) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB))\n",
+      "File \u001b[1;32mc:\\Users\\JP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1696\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   1687\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;241m=\u001b[39m OrderedDict()\n\u001b[0;32m   1689\u001b[0m \u001b[38;5;66;03m# On the return type:\u001b[39;00m\n\u001b[0;32m   1690\u001b[0m \u001b[38;5;66;03m# We choose to return `Any` in the `__getattr__` type signature instead of a more strict `Union[Tensor, Module]`.\u001b[39;00m\n\u001b[0;32m   1691\u001b[0m \u001b[38;5;66;03m# This is done for better interop with various type checkers for the end users.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1694\u001b[0m \u001b[38;5;66;03m# See full discussion on the problems with returning `Union` here\u001b[39;00m\n\u001b[0;32m   1695\u001b[0m \u001b[38;5;66;03m# https://github.com/microsoft/pyright/issues/4213\u001b[39;00m\n\u001b[1;32m-> 1696\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Any:\n\u001b[0;32m   1697\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_parameters\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m:\n\u001b[0;32m   1698\u001b[0m         _parameters \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_parameters\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
